# synopsys-dw-uart

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: embedded_io.rs  lib.rs  registers.rs
