[package]
name = "synopsys-dw-uart"
description = "Driver for Synopsys DesignWare DW_apb_uart."
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Andrew Walbran <qwandor@google.com>"]
rust-version = "1.88"
keywords = ["uart", "driver"]
categories = ["hardware-support", "embedded", "no-std", "no-std::no-alloc"]

[dependencies]
bitflags = "2.9.4"
embedded-io = { version = "0.6", optional = true }
safe-mmio = "0.2.5"
thiserror = "2.0.14"
zerocopy = "0.8.26"

[features]
default = ["embedded-io"]
