[package]
name = "synopsys-dw-uart"
description = "Driver for Synopsys DesignWare DW_apb_uart."
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Andrew Walbran <qwandor@google.com>"]
rust-version = "1.88"
repository = "https://github.com/google/synopsys-dw-uart"
keywords = ["uart", "driver"]
categories = ["hardware-support", "embedded", "no-std", "no-std::no-alloc"]

[dependencies]
bitflags = "2.10.0"
embedded-io = { version = "0.7", optional = true }
safe-mmio = "0.2.6"
thiserror = { version = "2.0.17", default-features = false }
zerocopy = "0.8.33"

[features]
default = ["embedded-io"]
